# meta-analyser

./: .gitignore  README.md  pyproject.toml  table_previews.md  table_previews.r
app/: controller.py  (+3 more)
radchemoscreens/: chemo_radio_resistance_screens.bib  describe.py  functioncallingminimal.py  gui.py  key_stats.md  local_query.txt  output.txt  papers_with_links.md  pmc_searches.txt  pmctextscraper.py  promptworkshopping.py  pubmed_searches.md  pubmedpmc.md  pyproject.toml  query_parser.py  search_for_papers.py  table_annotation.json  tables_cli.py  workflow_pseudocode.md
radchemoscreens/app/: controller.py  gui.py  gui_old.py  main.py  model.py  search_for_papers.py  selected_papers_and_files.json  view.py
radchemoscreens/dependencies/: functioncall.json  prompt_examples.json
radchemoscreens/downloads/: awahGenomeScaleCRISPR2022_35990011_5953_DMSO_Day14_R2.txt  awahGenomeScaleCRISPR2022_35990011_6377_Library.txt  awahGenomeScaleCRISPR2022_35990011_6396_Puromycin_Day0.txt  awahGenomeScaleCRISPR2022_35990011_6397_Puromycin_Day14.txt  awahGenomeScaleCRISPR2022_35990011_6398_DMSO_Day14.txt  awahGenomeScaleCRISPR2022_35990011_6399_Temozolomide_Day14.txt  awahRibosomalProteinS112020_32528131_NIHMS1599130-supplement-1599130_SuppList_Data_1B.xlsx  balmusATMOrchestratesDNAdamage2019_30622252_41467_2018_7729_MOESM3_ESM.xlsx  balmusATMOrchestratesDNAdamage2019_30622252_41467_2018_7729_MOESM4_ESM.xlsx  biaynaLossAbasicSite2021_33788831_pbio.3001176.s014.xlsx  caiCooperationATMFanconi2020_32075772_NIHMS1563617-supplement-3.xlsx  chenGenomicLandscapeSensitivity2023_37251921_Table_1.xlsx  dengIdentifyingCDC7Synergistic2023_36725843_41420_2023_1315_MOESM8_ESM.xlsx  heDYNLL1BindsMRE112018_30464262_NIHMS1567675-supplement-Table_1.xlsx  huangGenomeWideCRISPR2019_31508283_ADVS-6-1900782-s005.xlsx  huangGenomeWideCRISPR2019_31508283_ADVS-6-1900782-s006.xlsx  lanCRISPRCas9ScreenIdentifies2022_35053488_cancers-14-00326-s001.xlsx  liuMTORInhibitionAttenuates2022_36396656_41467_2022_34890_MOESM5_ESM.xlsx  liuSpindleAssemblyCheckpoint2019_30862715_NIHMS1524158-supplement-5.xlsx  (+12 more)
(+93 files in other folders)
