[tool.poetry]
name = "meta-analyser"
version = "0.1.0"
description = ""
authors = ["Jordan Taylor <jtaylor81284@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
requests = "^2.31.0"
playwright = "^1.35.0"
pandas = "^2.0.2"
openpyxl = "^3.1.2"
scikit-image = "^0.21.0"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.2"
python-dotenv = "^1.0.0"
pyqt5-qt5 = "5.15.2"
pyqt5 = "5.15.9"
bio = "^1.5.9"
sqlalchemy = "^2.0.20"
nltk = "^3.8.1"
toml = "^0.10.2"
pyparsing = "^3.1.1"
xlwings = "^0.30.12"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.3"
pyinstaller = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
