[tool.poetry]
name = "ifitm-cancer-assoc"
version = "0.1.0"
description = ""
authors = ["Jordan Taylor <jtaylor81284@hotmail.com>"]
readme = "README.md"
packages = [{include = "ifitm_cancer_assoc"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
playwright = "^1.35.0"
bibtexparser = "^1.4.0"
pandas = "^2.0.2"
openai = "^0.27.8"
openpyxl = "^3.1.2"
xlrd = "^2.0.1"
pydantic = "^1.10.9"
debugger = "^1.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
